fix: corregir carga de ejemplos .chs en produccion
- Los archivos .chs no eran accesibles por ruta absoluta en Railway
- Se migro la lectura de archivos a ClassPathResource de Spring
- Ahora los ejemplos se leen correctamente desde el JAR empaquetado